PROJECT(my_video_device)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_LIBRARY(my_video_device SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(my_video_device PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})

INSTALL(TARGETS my_video_device
		LIBRARY DESTINATION ${SUYUN_SDK_DIR}/lib
		)


