PROJECT(video_capture)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_LIBRARY(video_capture SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(video_capture PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})

INSTALL(TARGETS video_capture LIBRARY DESTINATION ${SUYUN_SDK_DIR}/lib)


#add_subdirectory(test_video_capture)
