PROJECT(video_render)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../ffmpeg_lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../conf_ctrl)

#for qt
FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
INCLUDE(${QT_USE_FILE})

SET(CMAKE_AUTOMOC ON)
SET(video_render_HEADERS yuv_widget.h yuv_gl_widget.h yuv_widget_impl.h yuv_gl_widget_impl.h)
QT4_WRAP_CPP(video_render_HEADERS_MOC ${video_render_HEADERS})

FIND_PACKAGE(OpenGL REQUIRED)
IF(NOT OPENGL_FOUND)
MESSAGE(FATAL_ERROR "OPENGL not found!")
ENDIF()

SET(LIBRARIES ${OPENGL_LIBRARIES})
INCLUDE_DIRECTORIES(${QT_QTOPENGL_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_LIBRARY(video_render SHARED  ${SRC_LIST})
TARGET_LINK_LIBRARIES(video_render ${QT_LIBRARIES} ${LIBRARIES})
#endif for qt

SET_TARGET_PROPERTIES(video_render PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})
INSTALL(TARGETS video_render LIBRARY DESTINATION ${SUYUN_SDK_DIR}/lib)

#ADD_SUBDIRECTORY(test_video_render)
